<resources>
    <string name="app_name">LogInAndSignUp</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="DescLogo">Logo de l\'app</string>
    <string name="please_log_in">please log in</string>
    <string name="logo_pseudo">Logo pseudo</string>
    <string name="logo_password">logo password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="more_info">More info</string>
</resources>